clusters/labinfra/apps/nginx-test.xuperson.org/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-test
  labels:
    app.kubernetes.io/name: nginx-test
    app.kubernetes.io/managed-by: flux
