clusters/labinfra/apps/nginx-test.xuperson.org/nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test
  namespace: nginx-test
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "nginx-test.xuperson.org"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: nginx-test.xuperson.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-test-service
            port:
              number: 80
